Fixed typo in contacts

--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -21,7 +21,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<p align="left"> If you would like to ask for more information, inquire about my servies, or would just like to chat, I currently live in Edmonton, Canada, and the best ways to reach me are below: 
+				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, I currently live in Edmonton, Canada, and the best ways to reach me are below: 
 				</p>
 				<p align="left"> 
 					&emsp;&emsp; Jack Brons<br>
