Added favicon image

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -1,4 +1,7 @@
 {% load static %}
+
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
+
 <!DOCTYPE html>
 <html>
 <head>
