Edited contacts to access correct picture

--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -10,7 +10,7 @@
 	</div>
 	<hr>
 	<div class="row">
-		<img src="{% static 'images/portfolio/aceWNC.jpg' %}" 
+		<img src="{% static 'images/aceWNC2.jpeg' %}" 
 					width=100%;
   					height= 100%;>
 		<div class="card card-body h-100 border-info" id="profile-wrapper">
