Fixed a lot of formating in my portfolio

--- a/base/templates/portfolio/ml-models.html
+++ b/base/templates/portfolio/ml-models.html
@@ -90,6 +90,7 @@
 						<br>
 					</p>
 				</div>
+			</div>
 			<div class="row">
 				<div class="col-md-12">
 					<img src="{% static 'images/portfolio/mraAnalysisFull.png' %}" 
@@ -100,6 +101,7 @@
 			</div>
 		</div>
 	</div>
+	<br>
 </div>
 {% endblock %}
 </html>
