--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -10,10 +10,11 @@
 	</div>
 	<hr>
 	<div class="row">
-		<img src="{% static 'images/aceWNC2.jpeg' %}" 
-					width=100%;
-  					height= 100%;>
 		<div class="card card-body h-100 border-info" id="profile-wrapper">
+		<center><img src="{% static 'images/aceWNC2.jpeg' %}" 
+					width=60%;
+  					height= 60%;>
+  				</center>
 			<br>
 		<div class="row">
 			<div class="col-md-12">
@@ -43,6 +44,7 @@
 			<div class="col-md-8"></div>
 		</div>
 		</div>
+		<br>
 	</div>
 </div>
 {% endblock %}
