--- a/base/templates/base/portfolio.html
+++ b/base/templates/base/portfolio.html
@@ -10,6 +10,7 @@
 		<h1>&nbsp&nbspPORTFOLIO</h1>
 	</div>
 	<hr>
+	<div class="row">
 	<div class="card card-body h-100">
 		<div class="row">
 			<div class="col-md-6">
@@ -19,7 +20,7 @@
 			<div class="col-md-6">
 				<a href="/portfolio/singlecell"><img src="{% static 'images/portfolio/tSNE.png' %}" 
 				width=100%;
-  				height= 100%;>
+  				height= 100%;></a>
 			</div>
 		</div>
 		<br>
@@ -29,7 +30,7 @@
 			<div class="col-md-5">
 				<a href="/portfolio/ml-models"><img src="{% static 'images/portfolio/decisionTree.png' %}"
 				width=100%;
-  				height=100%;>
+  				height=100%;></a>
 			</div>
 			<div class="col-md-1">
 			</div>
@@ -51,7 +52,7 @@
 			<div class="col-md-5">
 				<a href="/portfolio/splicing"><img src="{% static 'images/portfolio/DEXSeqSplicingItgb1.png' %}"
 				width=100%;
-  				height=100%;>
+  				height=100%;></a>
 			</div>
 		</div>
 		<br>
@@ -61,7 +62,7 @@
 			<div class="col-md-5">
 				<a href="/portfolio/pathway-analysis"><img src="{% static 'images/portfolio/pi3kKEGG.png' %}" 
 				width= 100%;
-  				height= 100%;>
+  				height= 100%;></a>
 			</div>
 			<div class="col-md-1">
 			</div>
@@ -72,6 +73,7 @@
 		</div>
 		<br>
 
+	</div>
 	</div>
 	<br>
 </div>
