Some more reformating and reshaped the picture layout on my contacts page

--- a/base/templates/base/about.html
+++ b/base/templates/base/about.html
@@ -9,6 +9,7 @@
 		<h1>&nbsp&nbspABOUT</h1>
 	</div>
 	<hr>
+	<div class="row">
 	<div class="card card-body h-100 border-info" id="profile-wrapper">
 		<div class="row">
 			<div class="col-md-5">
@@ -20,9 +21,9 @@
 		<div class="row">
 			<div class="col-md-5">
 				<p align="left">
-					I was born and raised in Canada and grew up in Edmonton, Alberta. I got my bachelors degree from the University of Alberta in mathematics in 2019 and afterwards I decided I wanted to obtain a Masters degree in Europe. Having travelled extensively in my life I've learned that I love experienceing new cultures and places and wanted to try living in a new place for the duration of my studies. In 2020 I got into the University of Freiburg, Germany, for a Masters in Computer Science, however, the covid-19 pandemic saw world travel come to a halt and so the first two semesters of my degree I ended up living and studying in Canada but travelling to Germany to write exams. Finally in July 2021 I moved to Germany and lived there until October 2022 when I completed my degree with a specialization in Artificial Intelligence.
+					I was born and raised in Canada and grew up in Edmonton, Alberta. I got my bachelors degree from the University of Alberta in mathematics in 2019 and afterwards I decided I wanted to obtain a Masters degree in Europe. Having travelled extensively in my life I've learned that I love experienceing new cultures and places and wanted to try living in a new environment for the duration of my studies. In 2020 I got into the University of Freiburg, Germany, for a Masters in Computer Science, however, the covid-19 pandemic saw world travel come to a halt and so the first two semesters of my degree I ended up living and studying in Canada but travelling to Germany periodically for exams. Finally in July 2021 I moved to Germany and lived there until October 2022 when I completed my degree with a specialization in Artificial Intelligence.
 					<br><br>
-					I love to travel and have visited over 30 countries so far (the adjacent picture is of me in Zion national park, Utah in 2023). In my personal time I enjoy ice hockey (my favorite team is the Edmonton Oilers if they ever manage to win something in my lifetime but they've yet to win anything in my lifetime...). Additionally, I speak english and german and am currently attending classes to learn spanish.<br>
+					I love to travel and have visited over 30 countries so far (the adjacent picture is of me in Zion national park, Utah in 2023). In my personal time I enjoy ice hockey (my favorite team is the Edmonton Oilers however they've yet to give me anything to cheer for in my lifetime...). Additionally, I speak english and german and am currently attending classes to learn spanish.<br>
 				</p>
 			</div>
 
@@ -38,6 +39,8 @@
 
 		</div>
 	</div>
+	</div>
+	<br>
 </div>
 {% endblock %}
 </html>
