--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -11,41 +11,35 @@
 	<hr>
 	<div class="row">
 		<div class="card card-body h-100 border-info" id="profile-wrapper">
-		<center><img src="{% static 'images/aceWNC2.jpeg' %}" 
-					width=60%;
-  					height= 60%;>
+		<div class="row">
+			<div class="col-md-5">
+			<center><img src="{% static 'images/aceWNC2.jpeg' %}" 
+					width=100%;
+  					height= 100%;>
   				</center>
-			<br>
-		<div class="row">
-			<div class="col-md-12">
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12">
-				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, I currently live in Edmonton, Canada, and the best ways to reach me are below: 
+			<div class="col-md-7">
+				<br>
+				<h4>How to Reach Me</h4>
+				<br>
+				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, I currently live in Edmonton, Canada. The best ways to reach me are below: 
 				</p>
 				<p align="left"> 
 					&emsp;&emsp; Jack Brons<br>
 					&emsp;&emsp; Email: jbrons17@gmail.com<br>
 					&emsp;&emsp; Phone: +1 (780) 916-9789<br>
 					&emsp;&emsp; Socials:
-
+				<br>
 				<ul class="social-links">
 					<li><a href="https://www.facebook.com/jackbrons17"><img class="social" src="{% static 'images/facebook.png' %}"></a></li>
 					<li><a href="https://www.linkedin.com/in/jack-brons-859051194"><img class="social" src="{% static 'images/linkedin.png' %}"></a></li>
 					<li><a href="https://github.com/jb994"><img class="social" src="{% static 'images/github.png' %}"></a></li>
 				</ul></p>
-
-
-				<p>
-				
-				</p>
 			</div>
-			<div class="col-md-8"></div>
 		</div>
 		</div>
-		<br>
 	</div>
+	<br>
 </div>
 {% endblock %}
 </html>
