Fixed images so that they appear the correct size in the safari browser as well. Reworded contact page.

--- a/base/templates/base/portfolio.html
+++ b/base/templates/base/portfolio.html
@@ -18,9 +18,9 @@
 				<p><br>I have worked both in industry and have written my Master's thesis on the analysis of single-cell RNA-seq data. In a working capacity, I have performed analaysis on these datasets to uncover the genetic pathways involved in the effects of novel drugs working through the steps of alignment, quality control, filtering & read normalization, regression out of certain biological quality markers such as mitochondrial read counts, dimensional reduction (PCA, UMAP, & tSNE), hierarchical clustering, and differential expression analysis.</p>
 			</div>
 			<div class="col-md-6">
+				<br>
 				<a href="/portfolio/singlecell"><img src="{% static 'images/portfolio/tSNE.png' %}" 
-				width=100%;
-  				height= 100%;></a>
+				width=100%;></a>
 			</div>
 		</div>
 		<br>
@@ -28,9 +28,9 @@
 		<br>
 		<div class="row">
 			<div class="col-md-5">
+				<br>
 				<a href="/portfolio/ml-models"><img src="{% static 'images/portfolio/decisionTree.png' %}"
-				width=100%;
-  				height=100%;></a>
+				width=100%;></a>
 			</div>
 			<div class="col-md-1">
 			</div>
@@ -50,9 +50,9 @@
 			<div class="col-md-1">
 			</div>
 			<div class="col-md-5">
+				<br>
 				<a href="/portfolio/splicing"><img src="{% static 'images/portfolio/DEXSeqSplicingItgb1.png' %}"
-				width=100%;
-  				height=100%;></a>
+				width=100%;></a>
 			</div>
 		</div>
 		<br>
@@ -60,9 +60,9 @@
 		<br>
 		<div class="row">
 			<div class="col-md-5">
+				<br>
 				<a href="/portfolio/pathway-analysis"><img src="{% static 'images/portfolio/pi3kKEGG.png' %}" 
-				width= 100%;
-  				height= 100%;></a>
+				width= 100%;></a>
 			</div>
 			<div class="col-md-1">
 			</div>
