--- a/base/templates/base/about.html
+++ b/base/templates/base/about.html
@@ -31,10 +31,9 @@
 			</div>
 
 			<div class="col-md-6">
-				<br><br>
+				<br>
 				<img src="{% static 'images/jack/zion.jpeg' %}" 
-						width=100%;
-	  					height= 75%;>
+						width=100%;>
 			</div>
 
 		</div>
