--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -14,15 +14,14 @@
 		<div class="row">
 			<div class="col-md-5">
 			<center><img src="{% static 'images/aceWNC2.jpeg' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
   				</center>
 			</div>
 			<div class="col-md-7">
 				<br>
 				<h4>How to Reach Me</h4>
 				<br>
-				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, I currently live in Edmonton, Canada. The best ways to reach me are below: 
+				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, then please feel free to contact me. I currently live in Edmonton, Canada and the best ways to reach me are below: 
 				</p>
 				<p align="left"> 
 					&emsp;&emsp; Jack Brons<br>
