--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -64,8 +64,7 @@
 			<div class="card card-body h-100">
 				<h5>A Photo of my Dog</h5><br>
 				<img src="{% static 'images/charlotte.jpeg' %}" alt="Little Charlotte" 
-				width=100%;
-  				height= 100%;><br>
+				width=100%;><br>
   				<p align="center"> This is Charlotte </p>
 			</div>
 			
