--- a/base/templates/portfolio/ml-models.html
+++ b/base/templates/portfolio/ml-models.html
@@ -40,8 +40,7 @@
 				</div>
 				<div class="col-md-5">
 					<img src="{% static 'images/portfolio/decisionTreeBarplot.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 			</div>
 			<div class="row">
@@ -56,8 +55,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<img src="{% static 'images/portfolio/decisionTreew5.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 			</div>
 			<br><hr><br>
@@ -76,8 +74,7 @@
 				</div>
 				<div class="col-md-5">
 					<img src="{% static 'images/portfolio/cytoscapeKeyDrivers.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 			</div>
 			<br><hr><br>
@@ -94,8 +91,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<img src="{% static 'images/portfolio/mraAnalysisFull.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 				<br>
 			</div>
