--- a/base/templates/portfolio/pathway-analysis.html
+++ b/base/templates/portfolio/pathway-analysis.html
@@ -24,8 +24,7 @@
 				</div>
 				<div class="col-md-5">
 					<img src="{% static 'images/portfolio/pi3kKEGG.png' %}"
-					width=100%;
-  					height=100%;>
+					width=100%;>
 				</div>
 			</div>
 			<br><hr><br>
@@ -46,13 +45,11 @@
 			<div class="row">
 				<div class="col-md-6">
 					<img src="{% static 'images/portfolio/pathwayEnrichment/KEGG_2021_Human.png' %}"
-					width=100%;
-  					height=100%;>
+					width=100%;>
 				</div>
 				<div class="col-md-6">
 					<img src="{% static 'images/portfolio/pathwayEnrichment/Reactome_2022.png' %}"
-					width=100%;
-  					height=100%;>
+					width=100%;>
 				</div>
 			</div>
 			<br><hr>
