--- a/base/templates/portfolio/singlecell.html
+++ b/base/templates/portfolio/singlecell.html
@@ -22,8 +22,7 @@
 				</div>
 				<div class="col-md-6">
 					<img src="{% static 'images/portfolio/tSNE.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 			</div>
 			<br>
@@ -44,18 +43,15 @@
 			<div class="row">
 				<div class="col-md-4">
 					<img src="{% static 'images/portfolio/combinedClustersTSNE_Cd79a.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 				<div class="col-md-4">
 					<img src="{% static 'images/portfolio/combinedClustersTSNE_Siglech.png' %}"
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 				<div class="col-md-4">
 					<img src="{% static 'images/portfolio/combinedClustersTSNE_S100a8.png' %}" 
-					width=100%;
-  					height= 100%;>
+					width=100%;>
 				</div>
 			</div>
 
@@ -77,8 +73,7 @@
 				</div>
 				<div class="col-md-5">
 					<a href="/portfolio/singlecell/cellTypes"><img src="{% static 'images/portfolio/cellTypes.png' %}" 
-					width=100%;
-  					height= 100%;></a>
+					width=100%;></a>
 				</div>
 			</div>
 
@@ -105,8 +100,7 @@
 				<div class="col-md-3"></div>
 				<div class="col-md-6">
 					<a href="/portfolio/singlecell/volcano-plot"><img src="{% static 'images/portfolio/Normal_Vehicle_scVolcano.png' %}" 
-					width=100%;
-  					height= 100%;></a>
+					width=100%;></a>
 				</div>
 				<div class="col-md-3"></div>
 				
@@ -125,8 +119,7 @@
 			<div class='row'>
 				<div class="col-md-9">
 					<a href="/portfolio/singlecell/gene-net"><img src="{% static 'images/portfolio/NormalxVehicle_2.0lfc_NET.png' %}" 
-					width=100%;
-  					height= 100%;></a>
+					width=100%;></a>
 				</div>
 			</div>
 		</div>
