--- a/base/templates/portfolio/splicing-analysis.html
+++ b/base/templates/portfolio/splicing-analysis.html
@@ -31,14 +31,12 @@
 				<div class="col-md-1"></div>
 				<div class="col-md-5">
 					<img src="{% static 'images/portfolio/DEXSeqSplicingItgb1.png' %}"
-					width=100%;
-  					height=100%;>
+					width=100%;>
 				</div>
 				<div class="col-md-0.5"></div>
 				<div class="col-md-5">
 					<img src="{% static 'images/portfolio/edgeRSplicingItgb1.png' %}"
-					width=100%;
-  					height=100%;>
+					width=100%;>
 				</div>
 			</div>
 
@@ -57,8 +55,7 @@
 				</div>
 				<div class="col-md-10">
 					<img src="{% static 'images/portfolio/Elp5_DiffTranscripts.png' %}"
-					width=100%;
-  					height=100%;>
+					width=100%;>
 				</div>
 				<div class="col-md-1">
 				</div>
