Fixed some text which used to be correct but is not anymore

--- a/base/templates/portfolio/singlecell.html
+++ b/base/templates/portfolio/singlecell.html
@@ -84,7 +84,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<p align="left">
-						Below on the left is another interactive plot called a Volcano Plot. Performing a differential expression analysis on each celltype revealed the genes which were either most significantly up- or down- regulated. Using a threshold of |log2 Fold-Change| >= 1.0 a few important genes can be singled out and investigated. Hovering over each dot will indicate what gene it is and in which cell type the significance comes from.
+						Below is another interactive plot called a Volcano Plot. Performing a differential expression analysis on each celltype revealed the genes which were either most significantly up- or down- regulated. Using a threshold of |log2 Fold-Change| >= 1.0 a few important genes can be singled out and investigated. Hovering over each dot will indicate what gene it is and in which cell type the significance comes from.
 					</p>
 				</div>
 			</div>
