Edited homepage to remove specific references to companies I have consulted for, also added a predictive-medicine file to be updated and added to portfolio at some point

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -42,7 +42,7 @@
 			<div class="card card-body h-100">
 				<h5>Experience & Education</h5>
 				<p>I completed my Bachelors in Mathematics in 2019 at the University of Alberta and my Masters in Computer Science from the University of Freiburg, Germany in 2022. Specialized in artificial intelligence, I've focused my education on the various machine learning models at the forefront of the field and how to refine them to be able to tackle any task. My thesis in particular was on developing a novel method for projecting high-dimensional single-cell time-series datasets in the field of bioinformatics to produce more meaningful embeddings.</p>
-				<p>I've worked at multiple bioinformatics labs throughout my studies and currently work as a bioinformatics & machine learning consultant for Hepion Pharmaceuticals analysing multi-omics data to discover the mechanisms of novel drugs in the treatment of non-fatty alcoholic liver disease and various cancers.</p>
+				<p>I've worked at multiple bioinformatics labs throughout my studies and currently work as a bioinformatics & machine learning consultant for multiple biotech organizations analysing multi-omics data to discover the mechanisms of novel drugs in the treatment of non-fatty alcoholic liver disease and various cancers.</p>
 			</div>
 		</div>
 		<div class="col-md-6">
