--- a/base/templates/portfolio/pathway-analysis.html
+++ b/base/templates/portfolio/pathway-analysis.html
@@ -17,7 +17,7 @@
 				<div class="col-md-7">
 					<p align="left">
 						<br><br>
-						In conjunction with information from other analyses, I can take the important genes or proteins of a dataset and put them through a pathway enrichment to determine the most pathways most imvolved in a given disease state or drug treatment.<br>
+						In conjunction with information from other analyses, I can take the important genes or proteins of a dataset and put them through a pathway enrichment to determine the most pathways most involved in a given disease state or drug treatment.<br>
 						<br>
 						Differentially expressed gene lists, WGCNA modules of genes, list of differentially spliced genes, or any other list of genes connected with a given treatment can be put through a pathway enrichment to uncover the underlying mechanisms at play.
 					</p>
