Changed the picture on my contact page

--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -13,7 +13,7 @@
 		<div class="card card-body h-100 border-info" id="profile-wrapper">
 		<div class="row">
 			<div class="col-md-5">
-			<center><img src="{% static 'images/aceWNC2.jpeg' %}" 
+			<center><img src="{% static 'images/jack/winterjack.jpeg' %}" 
 					width=100%;>
   				</center>
 			</div>
