Fixed a typo in the ml-models page with the word dyfunction

--- a/base/templates/portfolio/ml-models.html
+++ b/base/templates/portfolio/ml-models.html
@@ -47,7 +47,7 @@
 				<div class="col-md-12">
 					<p align="left">
 						<br>
-						From the barplot and decision tree produced by the model one can see the gene Gprasp1 was the most significant gene in explaining Sirius Red %s in certain samples. The decision tree indicates that four samples with very high sirius red levels were distinct from all the other samples based on the high levels of Gprasp1 in their tissues. While this gene explains sirius red levels for these 4 extreme cases it appears Mmp2 is a more important gene in explaining sirius red as it splits 21 and 32 samples based on their expression levels and these expression levels very highly relate to the fibrosis levels. Referencing the gene through the literature Mmp2 is an already known gene related to disfunction in liver fibrosis.
+						From the barplot and decision tree produced by the model one can see the gene Gprasp1 was the most significant gene in explaining Sirius Red %s in certain samples. The decision tree indicates that four samples with very high sirius red levels were distinct from all the other samples based on the high levels of Gprasp1 in their tissues. While this gene explains sirius red levels for these 4 extreme cases it appears Mmp2 is a more important gene in explaining sirius red as it splits 21 and 32 samples based on their expression levels and these expression levels very highly relate to the fibrosis levels. Referencing the gene through the available literature, Mmp2 is an already known gene related to dysfunction in liver fibrosis.
 					</p>
 				</div>
 			</div>
