--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -63,7 +63,7 @@
 		<div class="col-md-6">
 			<div class="card card-body h-100">
 				<h5>A Photo of my Dog</h5><br>
-				<img src="{% static 'images/charlotte.jpeg' %}" alt="Little Charlotte" 
+				<img src="{% static 'images/charlotte.jpeg' %}" alt="Little Charlotte" class="center"
 				width=100%;><br>
   				<p align="center"> This is Charlotte </p>
 			</div>
