Updated a few things now that I live in Belgium and not Canada. Added that I am LEAD bioinformatician at the VUB.

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -13,19 +13,19 @@
 	<div class="row">
 		<div class="col-md-4">
 			<div class="card card-body h-100 border-info" id="profile-wrapper">
-				<img id="profile-pic" src="{% static 'images/jack/romania.jpg' %}" >
+				<img id="profile-pic" src="{% static 'images/jack/professionalProfile.jpg' %}" >
 				<hr>
 				<h4>Hi I'm Jack</h4><br>
-				<p>I'm a contract bioinformatician looking to get intimate with your data.</p>
+				<p>I'm a Bioinformatician looking to get intimate with your data.</p>
 			</div>
 		</div>
 		<div class="col-md-8">
 			<div class="card card-body h-100 border-info">
 				<h4>Bioinformatician & Machine Learning Engineer</h4>
 				<hr>
-				<p>Having completed my Masters in Computer Science specialized in Artificial Intelligence in 2022 from the University of Freiburg, Germany, I began working as a bioinformatics consultant using my knowledge of single-cell RNA sequencing tools to analyze the gene expression profiles of new drugs as they move through clinical trials.</p>
+				<p>Having completed my Masters in Computer Science specialized in Artificial Intelligence in 2022 from the University of Freiburg, Germany, I began working as a bioinformatics consultant using my knowledge of single-cell RNA sequencing tools to analyze the gene expression profiles of new drugs as they move through clinical trials. Currently I am Lead Bioinformatician for the Translational Oncology Research Center at the Vrije Universiteit Brussel (VUB).</p>
 
-				<p>I've worked with 3 seperate labs doing various analyses ranging from differential gene expression detection for both bulk- and single-cell RNA seq data, identifying key mutations in variant calling format data, performing differential splicing analyses to understand genes affected by alterations to the spliceosome, as well as other tasks related to biological data analysis. More recently, I've been developing machine learning models to determine the key features involved in severe fibrotic liver tissues and the features involved in the shrinking of tumors given drug treatment. These models work to learn the most important relationships between genes in order to understand how novel drugs can reduce fibrosis and cancer.</p>
+				<p>I've worked with 4 seperate organizations doing various analyses ranging from differential gene expression detection for both bulk- and single-cell RNA seq data, investigating chromatin accesibility, identifying key mutations in variant calling format data, performing differential splicing analyses to understand genes affected by alterations to the spliceosome, as well as other tasks related to biological data analysis. More recently, I've been developing machine learning models to determine the key features involved in severe fibrotic liver tissues and the features involved in the shrinking of tumors given drug treatment. These models work to learn the most important relationships between genes in order to understand how novel drugs can reduce fibrosis and cancer.</p>
 
 				<ul class="social-links">
 					<li><a href="https://www.facebook.com/jackbrons17"><img class="social" src="{% static 'images/facebook.png' %}"></a></li>
@@ -42,7 +42,7 @@
 			<div class="card card-body h-100">
 				<h5>Experience & Education</h5>
 				<p>I completed my Bachelors in Mathematics in 2019 at the University of Alberta and my Masters in Computer Science from the University of Freiburg, Germany in 2022. Specialized in artificial intelligence, I've focused my education on the various machine learning models at the forefront of the field and how to refine them to be able to tackle any task. My thesis in particular was on developing a novel method for projecting high-dimensional single-cell time-series datasets in the field of bioinformatics to produce more meaningful embeddings.</p>
-				<p>I've worked at multiple bioinformatics labs throughout my studies and currently work as a bioinformatics & machine learning consultant for multiple biotech organizations analysing multi-omics data to discover the mechanisms of novel drugs in the treatment of non-fatty alcoholic liver disease and various cancers.</p>
+				<p>I've worked at multiple bioinformatics labs throughout my studies and most recently have worked as a bioinformatics & machine learning consultant in pharmaceuticals analysing multi-omics data to discover the mechanisms of novel drugs in the treatment of non-fatty alcoholic liver disease and various cancers. Currently I work for the VUB's Translational Oncology Research Center in Brussels, Belgium.</p>
 			</div>
 		</div>
 		<div class="col-md-6">
@@ -76,7 +76,7 @@
 				<p>	
 					My short term hope is to further refine my knowledge of bioinformatic techniques and analyses and extend my capabilities into other realms. Part of being a bioinforamtician is learning how to learn and broaden your knowledge of new types of data and new types of analyses. Having the opportunity to work with new types of data in the future is probably then my most pressing goal.
 					<br><br>
-					Additionally, after having lived in Germany for a year and a half pursuing my Master's Degree I realized how much I loved my time there and hope to return to living in the EU in the near future. Being an avid traveller, I loved being able to experience the different cultures first hand and from within. Being able to return to living in Germany or elsewhere in the EU would be a dream for me.
+					Being an avid traveller, I also love being able to experience different cultures first hand and from within. Hopefully I will be jet-setting soon again and expereincing new parts of the globe.
 				</p>
 			</div>
 		</div>
