--- a/base/templates/base/contact.html
+++ b/base/templates/base/contact.html
@@ -21,12 +21,12 @@
 				<br>
 				<h4>How to Reach Me</h4>
 				<br>
-				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, then please feel free to contact me. I currently live in Edmonton, Canada and the best ways to reach me are below: 
+				<p align="left"> If you would like to ask for more information, inquire about my services, or would just like to chat, then please feel free to contact me. I currently live in Brussels, Belgium and the best ways to reach me are below: 
 				</p>
 				<p align="left"> 
 					&emsp;&emsp; Jack Brons<br>
 					&emsp;&emsp; Email: jbrons17@gmail.com<br>
-					&emsp;&emsp; Phone: +1 (780) 916-9789<br>
+					&emsp;&emsp; WhatsApp: +32 (0)456 74 24 07<br>
 					&emsp;&emsp; Socials:
 				<br>
 				<ul class="social-links">
